<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_record"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"/>

        <EditText
            android:id="@+id/editTextRecordNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_record_no"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit" />
    </LinearLayout>
</ScrollView>