<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="todo"
            android:src="@drawable/doctor"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/patient_record"
            android:textColor="#546E7A"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile"
                android:hint="@string/enter_patient_s_username"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextIllness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_sick"
                android:hint="@string/enter_patient_s_illness"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditMedicalNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_number"
                android:hint="@string/enter_patient_s_medical_no"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextMedication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_medical"
                android:hint="@string/enter_medication"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerAllergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="@color/white"
            android:entries="@array/allergy"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTreatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_injection"
                android:hint="@string/enter_treatment"
                android:inputType="text"
                android:minHeight="48dp"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>